# Path: zn-vault-sdk-python/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "znvault"
version = "1.4.1"
description = "Python SDK for ZN-Vault secrets management"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "ZincWare Team", email = "dev@zincware.io"}
]
keywords = ["secrets", "vault", "security", "kms", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]
async = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/zincware/zn-vault-sdk-python"
Documentation = "https://github.com/zincware/zn-vault-sdk-python#readme"
Repository = "https://github.com/zincware/zn-vault-sdk-python.git"
Issues = "https://github.com/zincware/zn-vault-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
znvault = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/znvault"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
